# Lucy-0X3

./: .gitignore  Notas.txt  README.md
src/: CMakeLists.txt  LUCY.db  LUCY_database.sql  LUCY_extra.sql  LUCY_table_CARGOS.sql  LUCY_table_USERS.sql  Version.h  dataBase.ex  db.cpp  execultable.ex  libR.asm  libR.inc  main.asm  main.cpp  makefile  mount.sh
